# tutanak

./: .gitignore  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/src/: db.rs  main.rs  markov.rs  models.rs  shift_manager.rs
src/components/: ComponentContextMenu.tsx  DynamicComponent.tsx  DynamicTabRenderer.tsx  Editor.tsx  Grid.tsx  create-tab-dialog.tsx  menu.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  button.tsx  card.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  select.tsx  sheet.tsx  tabs.tsx  tooltip.tsx
src/contexts/: notes-context.tsx  tab-context.tsx  timeline-context.tsx
src/dashboard/: layout.tsx  page.tsx
src/dashboard/components/: add-note-dialog.tsx  canvas-konva-components.tsx  canvas-konva.tsx  canvas.tsx  create-tab-dialog.tsx  delete-tab-dialog.tsx  draggable-component.tsx  employee-dialog.tsx  empty-tab.tsx  group-dialog.tsx  group-management-dialog.tsx  group-management.tsx  model-panel.tsx  notification-bell.tsx  overview.tsx  shift-management.tsx  tab-bar.tsx  task-list.tsx  task-menu.tsx  template-panel.tsx  templates.tsx  timeline.tsx
src/hooks/: use-interactable.ts
src/lib/: ai-helper.ts
src/styles/: Grid.css  globals.css
src/types/: component.ts  shift.ts  tab.ts
